Update about section

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,7 @@ jobs:
   test:
     name: Rust ${{matrix.rust}}
     needs: pre_ci
- 
+    if: needs.pre_ci.outputs.continue
+    runs-on: ubuntu-latest
+    strategy:
+     
