--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@master
-  
+        with:
+          toolchain: ${{matrix.rust}}
+          components: rust-src
+      - name: Enable typ
