--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,9 @@ jobs:
         run: echo RUSTFLAGS=${RUSTFLAGS}\ -Zrandomize-layout >> $GITHUB_ENV
         if: matrix.rust == 'nightly'
       - run: cargo test
-      - run: cargo check --no-default-feature
+      - run: cargo check --no-default-features
+      - run: cargo check --features backtrace
+
+  build:
+    name: Rust ${{matrix.rust}}
+ 
