--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,8 @@ jobs:
     needs: pre_ci
     if: needs.pre_ci.outputs.continue
     runs-on: ubuntu-latest
-   
+    strategy:
+      fail-fast: false
+      matrix:
+        rust: [1.52.0, 1.51.0, 1.50.0, 1.42.0, 1.39.0]
+    timeout-
