Drone: update Lint results to reflect reduced error/warning count [skip ci]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,7 @@ jobs:
       fail-fast: false
       matrix:
         rust: [1.52.0, 1.51.0, 1.50.0, 1.42.0, 1.39.0]
-    timeout-
+    timeout-minutes: 45
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-too
