hp_accel: Add a new PnP ID HPQ6007 for new HP laptops

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,9 @@ jobs:
         with:
           toolchain: ${{matrix.rust}}
           components: rust-src
-      - run: 
+      - run: cargo check
+      - run: cargo check --no-default-features
+
+  windows:
+    name: Windows
+  
