--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,4 +64,8 @@ jobs:
     if: needs.pre_ci.outputs.continue
     runs-on: windows-latest
     timeout-minutes: 45
-    steps
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+        
