--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,4 +68,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
-        
+          components: rust-src
+      - run: cargo check --features backtrace
+
+  clippy:
+    name: 
